<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/background"
              android:padding="15dp">

  <TextView
    android:text="@string/activity_asked_for_result"
    android:textColor="@color/text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <LinearLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/buttonAccept"
      android:textColor="@drawable/button_text"
      android:textSize="14sp"
      android:layout_weight="0.495"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@drawable/button"
      android:minHeight="35dp"
      android:text="@string/action_accept" />

    <Space
      android:layout_weight="0.05"
      android:layout_width="0dp"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/buttonCancel"
      android:textColor="@drawable/button_text"
      android:textSize="14sp"
      android:layout_weight="0.495"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:minHeight="35dp"
      android:background="@drawable/button"
      android:text="@string/action_cancel" />
  </LinearLayout>
</LinearLayout>
